# lichess-event-stream-watcher

./: .gitignore  Cargo.toml  README.md
src/: conf.rs.default  event.rs  eventhandler.rs  eventstream.rs  lua.rs  main.rs  status.rs
src/signup/: actions.rs  mod.rs  newuser.rs  rules.rs
src/slack/: command.rs  event.rs  mod.rs  rtm.rs  web.rs
src/zulip/: command.rs  mod.rs  rtm.rs  web.rs
