[package]
name = "lichess-event-stream"
version = "0.1.0"
authors = ["ProgramFOX <programfox@hotmail.be>"]

[dependencies]
hyper = "0.12"
hyper-tls = "0.3.0"
tokio = "0.1.7"
futures = "0.1.21"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7.1"
rand = "0.5.5"
chrono = "0.4.6"
regex = "1"
serde_regex = "0.3.1"
rlua = "0.16.2"
urlencoding = "2.1"
base64 = "0.13"
