[package]
name = "lichess-event-stream"
version = "0.1.0"
authors = ["ProgramFOX <programfox@hotmail.be>"]

[dependencies]
hyper = "0.14"
hyper-rustls = "0.18"
tokio = "0.1"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"
rand = "0.8"
chrono = { version = "0.4", features = [ "serde" ] }
regex = "1"
serde_regex = "0.3"
rlua = "0.16.2"
urlencoding = "2.1"
base64 = "0.13"
