[package]
name = "lichess-event-stream"
version = "1.0.0"
authors = ["Thomas Daniels <daniels.thomas@pm.me>", "Lichess Team"]
edition = "2021"

[dependencies]
hyper = "0.12"
hyper-rustls = "0.18"
tokio = "1.18"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.4"
rand = "0.8"
chrono = { version = "0.4", features = [ "serde" ] }
regex = "1"
serde_regex = "1.1"
rlua = "0.19"
urlencoding = "2.1"
base64 = "0.21"
maxminddb = "0.17"
uaparser = "0.6"
lazy_static = "1.4"
